--- a/Testominial.css
+++ b/Testominial.css
@@ -91,6 +91,7 @@ body {
     #colmain{
         height: 270px;
         padding: -170px;
+        margin: 30px;
     }
     
 }
@@ -106,4 +107,31 @@ body {
     .custom-paragraph{
         font-size: 14px;
     }
+    
 }
+.visually-hidden{
+    width:10px;
+}
+.carousel-control-next{
+    width: 30px;
+    color: black;
+    background-color: rgb(239, 236, 236);
+    border: none;
+}
+.carousel-control-prev{
+    width: 30px;
+    color: black;
+    background-color:rgb(239, 236, 236);
+    border: none;
+}
+@media (min-width:500px) and (max-width:760px){
+    #head1{
+        font-size: 25px;
+        font-weight: 560;
+        width:200px
+    }
+    #colmain{
+        margin-right: 140px;
+    }
+}
+
